--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+logging.level.org.hibernate=INFO
+logging.level.org.springframework.boot=INFO
+logging.level.org.springframework.security.authentication=INFO
+logging.level.org.springframework.security.authorizationn=INFO
