--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 logging.level.org.hibernate=INFO
 logging.level.org.springframework.boot=INFO
+
+#splunk connection
+logging.file=app.log
+logging.level.com.example.demo.controllers=INFO
